# poe2-market-watch

./: .gitignore  README.md  gold_profile.json  poe2checker.py  poe2watcher.py  pyproject.toml  snapshot_cadence.py
docs/: gold_model.md  safety_and_terms.md  workflow.md
examples/: example_gold_profile.json  sample_run_commands.md
scripts/: validate_cli.sh
